--- a/MvcCrud/Views/Student/Edit.cshtml
+++ b/MvcCrud/Views/Student/Edit.cshtml
@@ -5,14 +5,14 @@
 
 <h2>Edit Student</h2>
 
-@using (Html.BeginForm("EditStudent", "Student", FormMethod.Post))
+@using (Html.BeginForm("EditStudent", "Student", new { studentId = Model.StudentId }, FormMethod.Post))
 {
     @Html.AntiForgeryToken();
 
     <div class="form-group row">
         @Html.LabelFor(model => model.StudentId, "Student ID", new { @class = "col-sm-2 col-form-label" })
         <div class="col-sm-10">
-            @Html.EditorFor(model => model.StudentId, new { @class = "form-control" })
+            @Html.DisplayFor(model => model.StudentId)
         </div>
     </div>
     <div class="form-group row">
