--- a/MvcCrud/Views/Student/Edit.cshtml
+++ b/MvcCrud/Views/Student/Edit.cshtml
@@ -11,8 +11,8 @@
 
     <div class="form-group row">
         @Html.LabelFor(model => model.StudentId, "Student ID", new { @class = "col-sm-2 col-form-label" })
-        <div class="col-sm-10">
-            @Html.DisplayFor(model => model.StudentId)
+        <div class="col-sm-10 align-self-center">
+            <span>@Html.DisplayFor(model => model.StudentId)</span>
         </div>
     </div>
     <div class="form-group row">
